--- a/dbt/Dockerfile
+++ b/dbt/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8
-RUN pip3 install dbt
+RUN pip3 install dbt==0.21.0 MarkupSafe==2.0.1 
 WORKDIR usr/dbt
 EXPOSE 8000
 CMD sleep infinity
